package br.dev.zancanela.taskboard.enums;

public enum ColunaTipo {
    INICIAL,
    PENDENTE,
    FINAL,
    CANCELAMENTO

}
